--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@ sidebar:
     <div class="post-related">
       <div>Related Articles</div>
       <ul>
-        {% assign posts = site[page.collection] | sample:4 %}
+        {%- assign posts = site[page.collection] | sample:4 -%}
         {%- for post in posts -%}
         <li><a class="post-link" href="{{post.url | relative_url}}" title="{{ page.next.title | escape }}">{{ post.title
             | escape | truncatewords: 12 }}</a></li>
@@ -79,5 +79,5 @@ sidebar:
 </div>
 
 {%- if page.paginate -%}
-{% include views/pagination.html posts = page.paginate %}
+{%- include views/pagination.html posts = page.paginate -%}
 {%- endif -%}
