--- a/_includes/functions/get_banner.html
+++ b/_includes/functions/get_banner.html
@@ -1,67 +1,67 @@
 {%- include functions.html func='log' level='debug' msg='Get banner value' -%}
-{% assign name = 'banner' %}
+{%- assign name = 'banner' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner = return %}
+{%- assign banner = return -%}
 
 {%- if banner.first -%}
   {%- include functions.html func='log' level='debug' msg='Get banner_image value' -%}
-  {% assign name = 'banner.image' %}
+  {%- assign name = 'banner.image' -%}
   {%- include functions.html func='get_value' -%}
-  {% assign banner_image = return | relative_url %}
+  {%- assign banner_image = return | relative_url -%}
 {%- else -%}
-  {% assign banner_image = banner | relative_url %}
+  {%- assign banner_image = banner | relative_url -%}
 {%- endif -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_background value' -%}
-{% assign name = 'banner.background' %}
+{%- assign name = 'banner.background' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_background = return %}
+{%- assign banner_background = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_opacity value' -%}
-{% assign name = 'banner.opacity' %}
+{%- assign name = 'banner.opacity' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_opacity = return %}
+{%- assign banner_opacity = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_height value' -%}
-{% assign name = 'banner.height' %}
+{%- assign name = 'banner.height' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_height = return %}
+{%- assign banner_height = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_min_height value' -%}
-{% assign name = 'banner.min_height' %}
+{%- assign name = 'banner.min_height' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_min_height = return %}
+{%- assign banner_min_height = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_heading_style value' -%}
-{% assign name = 'banner.heading_style' %}
+{%- assign name = 'banner.heading_style' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_heading_style = return %}
+{%- assign banner_heading_style = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_subheading_style value' -%}
-{% assign name = 'banner.subheading_style' %}
+{%- assign name = 'banner.subheading_style' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_subheading_style = return %}
+{%- assign banner_subheading_style = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_video value' -%}
-{% assign name = 'banner.video' %}
+{%- assign name = 'banner.video' -%}
 {%- include functions.html func='get_value' -%}
-{% assign banner_video = return %}
+{%- assign banner_video = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_loop value' -%}
-{% assign name = 'banner.loop' %}
+{%- assign name = 'banner.loop' -%}
 {%- include functions.html func='get_value' default=true -%}
-{% assign banner_loop = return %}
+{%- assign banner_loop = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_volume value' -%}
-{% assign name = 'banner.volume' %}
+{%- assign name = 'banner.volume' -%}
 {%- include functions.html func='get_value' default=0 -%}
-{% assign banner_volume = return %}
+{%- assign banner_volume = return -%}
 
 {%- include functions.html func='log' level='debug' msg='Get banner_start_at value' -%}
-{% assign name = 'banner.start_at' %}
+{%- assign name = 'banner.start_at' -%}
 {%- include functions.html func='get_value' default=0 -%}
-{% assign banner_start_at = return %}
+{%- assign banner_start_at = return -%}
 
-{% if banner %}
-  {% assign has_banner = true %}
-{% endif %}
+{%- if banner -%}
+  {%- assign has_banner = true -%}
+{%- endif -%}
