--- a/_includes/functions/get_datetimes.html
+++ b/_includes/functions/get_datetimes.html
@@ -1,13 +1,13 @@
-{% if include.params.filter %}
-  {% assign filter = include.params.filter %}
-{% endif %}
+{%- if include.params.filter -%}
+  {%- assign filter = include.params.filter -%}
+{%- endif -%}
 
-{% assign split_mark = '<|>' %}
+{%- assign split_mark = '<|>' -%}
 
-{% assign dates = '' %}
-{% for post in site.posts %}
-  {% assign name = post.date | date: filter %}
-  {% assign dates = dates | append: split_mark  | append: name %}
+{%- assign dates = '' -%}
+{%- for post in site.posts -%}
+  {%- assign name = post.date | date: filter -%}
+  {%- assign dates = dates | append: split_mark  | append: name -%}
 {% endfor %}
 
 {% assign return = dates
