--- a/_includes/sidebar/archive-list.html
+++ b/_includes/sidebar/archive-list.html
@@ -1,10 +1,10 @@
 {%- include functions.html func='log' level='debug' msg='Get datetimes value' -%}
 
-{% assign filter = '%Y' %}
-{% include functions.html func='get_datetimes' %}
-{% assign datetimes = return %}
+{%- assign filter = '%Y' -%}
+{%- include functions.html func='get_datetimes' -%}
+{%- assign datetimes = return -%}
 
-{% assign keys = datetimes %}
-{% assign field = 'date' %}
-{% assign url = '/publications/archives.html' | relative_url %}
-{% include sidebar/common-list.html %}
+{%- assign keys = datetimes -%}
+{%- assign field = 'date' -%}
+{%- assign url = '/publications/archives.html' | relative_url -%}
+{%- include sidebar/common-list.html -%}
