--- a/_includes/sidebar/category-list.html
+++ b/_includes/sidebar/category-list.html
@@ -1,9 +1,9 @@
 {%- include functions.html func='log' level='debug' msg='Get categories value' -%}
 
 {%- include functions.html func='get_categories' -%}
-{% assign categories = return %}
+{%- assign categories = return -%}
 
-{% assign keys = categories %}
-{% assign field = 'categories' %}
-{% assign url = '/publications/topics.html' | relative_url %}
-{% include sidebar/common-list.html %}
+{%- assign keys = categories -%}
+{%- assign field = 'categories' -%}
+{%- assign url = '/publications/topics.html' | relative_url -%}
+{%- include sidebar/common-list.html -%}
