--- a/_includes/sidebar/tag-list.html
+++ b/_includes/sidebar/tag-list.html
@@ -1,9 +1,9 @@
 {%- include functions.html func='log' level='debug' msg='Get tags value' -%}
 
 {%- include functions.html func='get_tags' -%}
-{% assign tags = return %}
+{%- assign tags = return -%}
 
-{% assign keys = tags %}
-{% assign field = 'tags' %}
-{% assign url = '/publications/tags.html' | relative_url %}
+{%- assign keys = tags -%}
+{%- assign field = 'tags' -%}
+{%- assign url = '/publications/tags.html' | relative_url -%}
 {%- include sidebar/common-list.html -%}
