--- a/_includes/views/paginator.html
+++ b/_includes/views/paginator.html
@@ -1,25 +1,25 @@
-{% if include.paginator %}
-  {% assign paginator = include.paginator %}
-{% endif %}
+{%- if include.paginator -%}
+  {%- assign paginator = include.paginator -%}
+{%- endif -%}
 
-{% if paginator.posts.size > 0 %}
+{%- if paginator.posts.size > 0 -%}
   <div class="paginator">
     <span class="previous">
-    {% if paginator.previous_page %}
+    {%- if paginator.previous_page -%}
       <a href="{{ paginator.previous_page_path | relative_url }}">Prev</a>
     {% else %}
       <span>Prev</span>
-    {% endif %}
+    {%- endif -%}
     </span>
 
     <span class="indicator"> {{ paginator.page }}/{{ paginator.total_pages }}</span>
 
     <span class="next">
-    {% if paginator.next_page %}
+    {%- if paginator.next_page -%}
       <a href="{{ paginator.next_page_path | relative_url }}">Next</a>
     {% else %}
       <span>Next</span>
-    {% endif %}
+    {%- endif -%}
     </span>
   </div>
-{% endif %}
+{%- endif -%}
