--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,18 +1,30 @@
----
-layout: framework
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
-banner: 'default'
-hidden:
-  - header
-  - navigator
-  - related_posts
----
+{%- if page.banner == nil -%}
+{%- assign banner = page.title -%}
+{%- endif -%}
 
-<div class="home">
-  {%- if page.banner == nil -%}
-    {%- assign banner = page.title -%}
-  {%- endif -%}
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: " en" }}">
 
-  {{ content }}
-</div>
+{%- include head.html -%}
+
+<body>
+
+  {%- include views/header.html -%}
+
+  {%- include views/banner.html -%}
+
+  <div class="home">
+    {%- include extensions/theme-toggle.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+  </div>
+
+  {%- include views/footer.html -%}
+
+</body>
+
+</html>
