--- a/_includes/views/pagination.html
+++ b/_includes/views/pagination.html
@@ -30,7 +30,12 @@
           {{ post.title | escape }}
         </a>
       </h2>
-      <h3 class="post-subtitle">{{ subheading | default: post.authors | escape }}</h3>
+      {%- if post.subtitle -%}
+      {%- assign post_subtitle = post.subtitle -%}
+      {%- elsif post.authors -%}
+      {%- assign post_subtitle = post.authors -%}
+      {%- endif -%}
+      <h3 class="post-subtitle">{{ subheading | default: post_subtitle | escape }}</h3>
       <div class="post-meta">
         <span class="post-date"><i class="far fa-calendar-alt"></i> {{ post.date | date: date_format }}</span>{%- if
         post.use_mtime -%}<span class="post-date left-vsplit"><i class="fas fa-edit"></i> {{ post.last_modified_at |
