--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -36,7 +36,12 @@
             {%- for path in page_paths -%}
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
-              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}{%- if my_page.redirect_to -%}<i class="fas fa-external-link-alt"></i>{%- endif -%}</a>
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | upcase | escape }}</a>
+              {%- endif -%}
+            {%- endfor -%}
+            {%- for link in site.header_ext_links -%}
+              {%- if link.title -%}
+              <a class="page-link" href="{{ link.url }}">{{ link.title | upcase | escape }}<i class="fas fa-external-link-alt"></i></a>
               {%- endif -%}
             {%- endfor -%}
           </div>
