--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -21,7 +21,7 @@
         {%- include views/site-brand.html -%}
       </span>
 
-      {%- if page_paths -%}
+      {%- if page_paths or site.header_ext_links.size > 0 -%}
         <nav class="site-nav">
           <input type="checkbox" id="nav-trigger" class="nav-trigger" />
           <label for="nav-trigger">
