Update to fontawsome 6

--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -41,7 +41,7 @@
             {%- endfor -%}
             {%- for link in site.header_ext_links -%}
               {%- if link.title -%}
-              <a class="page-link" href="{{ link.url }}">{{ link.title | upcase | escape }}<i class="fas fa-external-link-alt"></i></a>
+              <a class="page-link" href="{{ link.url }}">{{ link.title | upcase | escape }}<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
               {%- endif -%}
             {%- endfor -%}
           </div>
