--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ sidebar:
     {%- assign result = hidden | where_exp: "item", "item == 'navigator'" -%}
     {%- if result.size == 0 -%}
     {%- if page.previous or page.next -%}
-    <hr>
+    <hr class="sub-separator">
     <div class="post-nav">
       {%- if page.previous -%}
       <a class="previous" href="{{ page.previous.url | relative_url }}" title="{{
@@ -49,7 +49,7 @@ sidebar:
 
     {%- assign result = hidden | where_exp: "item", "item == 'related_posts'" -%}
     {%- if result.size == 0 -%}
-    <hr>
+    <hr class="sub-separator">
     <div class="post-related">
       <div>Related Articles</div>
       <ul>
