--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -16,7 +16,7 @@
         {{ copyright }}
         <span class="tie footer-icon">
           {%- for icon in site.copyright-icons -%}
-          <i class="fab {{ icon }}" style="margin-left: 3px;"></i>
+          <i class="fa-brands {{ icon }}"></i>
           {%- endfor -%}
         </span>
       </div>
