--- a/_sass/fa.scss
+++ b/_sass/fa.scss
@@ -1,6 +1,7 @@
 @import "fa/fontawesome.scss";
 @import "fa/solid.scss";
 @import "fa/regular.scss";
+@import "fa/brands.scss";
 
 .fa-arrow-up-right-from-square {
   font-size: 0.8em;
