--- a/_includes/sidebar/index-list.html
+++ b/_includes/sidebar/index-list.html
@@ -4,5 +4,6 @@
         <li><a href="{{ '/publications/topics.html' | relative_url }}">By research topics</a></li>
         <li><a href="{{ '/publications/tags.html' | relative_url }}">By tags</a></li>
         <li><a href="{{ '/publications/archives.html' | relative_url }}">By year</a></li>
+        <li><a href="{{ '/publications/journals.html' | relative_url }}">By journals</a></li>
     </ul>
 </div>
