--- a/_includes/views/post-item.html
+++ b/_includes/views/post-item.html
@@ -8,6 +8,6 @@
 <span class="post-meta">{{ post.date | date: date_format }}</span>
 <span>
   <a class="post-link" href="{{ post.url | relative_url }}">
-    {{ post.title | escape }}
+    {{ post.title }}
   </a>
 </span>
