--- a/_layouts/framework.html
+++ b/_layouts/framework.html
@@ -8,7 +8,7 @@ layout: default
      {{ content }}
 
   </section>
-  <section class="sidebar" style="margin-left: 15px;">
+  <section class="sidebar">
     <!-- Get sidebar items -->
     {%- if page.sidebar -%}
       {%- assign sidebar = page.sidebar -%}
