--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -18,6 +18,7 @@ $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark: darken($grey-color, 25%) !default;
 
 $white-color: #fdfdfd !default;
+$black-color: #010101 !default;
 
 $table-text-align: left !default;
 
