--- a/_includes/sidebar/tag-list.html
+++ b/_includes/sidebar/tag-list.html
@@ -6,4 +6,4 @@
 {%- assign keys = tags -%}
 {%- assign field = 'tags' -%}
 {%- assign url = '/publications/tags.html' | relative_url -%}
-{%- include sidebar/common-list.html -%}
+{%- include sidebar/common-list.html min_cnt = 3 -%}
