Add page edit link

--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -44,6 +44,7 @@
               <a class="page-link" href="{{ link.url }}">{{ link.title | upcase | escape }}<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
               {%- endif -%}
             {%- endfor -%}
+            <a class="page-link" href="https://github.com/seoklab/seoklab.github.io/edit/master/{{ page.path }}">EDIT<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </nav>
       {%- endif -%}
