No distracting link colors on emails

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -135,6 +135,10 @@ a {
     text-decoration: underline;
   }
 
+  &.email-link {
+    color: inherit;
+  }
+
   .social-media-list &:hover {
     text-decoration: none;
 
