Fix page-nav format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,19 +30,20 @@ sidebar:
     {%- if page.previous or page.next -%}
     <hr class="sub-separator">
     <div class="post-nav">
-      {%- if page.previous -%}
-      <a class="previous" href="{{ page.previous.url | relative_url }}" title="{{
-          page.previous.title | escape }}">{{ page.previous.title | escape | truncatewords: 6 }}</a>
-      {%- else -%}
-      <span></span>
-      {%- endif -%}
-
-      {%- if page.next -%}
-      <a class="next" href="{{ page.next.url | relative_url }}" title="{{ page.next.title | escape }}">{{
-        page.next.title | escape | truncatewords: 6 }}</a>
-      {%- else -%}
-      <span></span>
-      {%- endif -%}
+      <span>
+        {%- if page.previous -%}
+        <i class="fa-solid fa-angle-left"></i>
+        <a class="previous" href="{{ page.previous.url | relative_url }}" title="{{
+                  page.previous.title | escape }}">{{ page.previous.title | escape | truncatewords: 6 }}</a>
+        {%- endif -%}
+      </span>
+      <span>
+        {%- if page.next -%}
+        <a class="next" href="{{ page.next.url | relative_url }}" title="{{ page.next.title | escape }}">{{
+          page.next.title | escape | truncatewords: 6 }}</a>
+        <i class="fa-solid fa-angle-right"></i>
+        {%- endif -%}
+      </span>
     </div>
     {%- endif -%}
     {%- endif -%}
