--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -699,34 +699,16 @@ html {
   justify-content: space-between;
   margin: $spacing-unit * 0.5 0;
   padding: 0;
+  @include relative-font-size(1.125);
+
+  i {
+    color: #787878;
+    display: inline-block;
+  }
 
   a {
-    @include relative-font-size(1.125);
-    line-height: 15px;
     color: #666;
-    max-width: 50%;
-  }
-
-  .previous:before {
-    content: " ";
-    border: solid #787878;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    padding: 4px;
-    margin-right: 8px;
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-  }
-
-  .next:after {
-    content: " ";
-    border: solid #787878;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    padding: 4px;
-    margin-left: 8px;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
+    max-width: 45%;
   }
 }
 
