--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -25,7 +25,7 @@
         <a title="Yat, yet
             another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>,
         <a href="https://fontawsome.com">Font Awesome</a> &amp; <a class="dnsever" href="http://www.dnsever.com"
-          target="dnsever"><img src="http://banner.dnsever.com/dnsever-banner_80x16.gif" border="0"
+          target="dnsever"><img src="https://banner.dnsever.com/dnsever-banner_80x16.gif" border="0"
             alt="DNS server, DNS service"></a>.
       </div>
     </div>
