--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
+heading: ' heading'
 subheading: 'Your awesome subheading'
 banner: 'default'
 ---
