--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -4,15 +4,5 @@ sidebar: archive-list
 ---
 
 {%- if site.posts.size > 0 -%}
-
-  {%- include functions.html func='log' level='debug' msg='Get datetimes value' -%}
-
-  {%- assign filter = '%Y' -%}
-  {%- include functions.html func='get_datetimes' -%}
-  {%- assign datetimes = return -%}
-
-  {%- assign keys = datetimes | reverse -%}
-  {%- assign field = 'date' -%}
-  {%- include views/segments.html -%}
-
+  {%- include views/archive-segments.html -%}
 {%- endif -%}
